suggest Rgraphviz? ugh this is annoying...

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,13 +24,12 @@ Suggests:
     knitr,
     magick,
     paws,
+    Rgraphviz,
     SpatialData,
     testthat,
     DT
 Remotes:
     HelenaLC/SpatialData@wo_data
-Enhances:
-    Rgraphviz
 biocViews: 
     DataImport, 
     DataRepresentation, 
