--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,7 @@ Suggests:
     testthat,
     DT
 Remotes:
-    HelenaLC/SpatialData@wo_data
+    HelenaLC/SpatialData
 biocViews: 
     DataImport, 
     DataRepresentation, 
