--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SpatialData.data
 Title: SpatialData datasets
 Depends: R (>= 4.4)
-Version: 0.99.0
+Version: 0.99.1
 Description: Makes 'scverse' data examples available through the NSF OSN, 
     and accessible from within R, using 'BiocFileCache'. Furthermore, 
     provides an interface to Python's 'spatialdata-io' for reading and
@@ -15,6 +15,8 @@ Authors@R: c(
 	    role=c("aut", "cre"),
 	    email="helena@crowell.eu", 
 	    comment=c(ORCID="0000-0002-4801-1767")))
+Depends:
+    SpatialData
 Imports:
     basilisk,
     BiocFileCache,
@@ -25,7 +27,6 @@ Suggests:
     magick,
     paws,
     Rgraphviz,
-    SpatialData,
     testthat,
     DT
 Remotes:
