--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,5 @@ export(MulticancerSteinbock)
 export(available_sdio)
 export(use_sdio)
 import(BiocFileCache)
+importFrom(SpatialData,readSpatialData)
 importFrom(utils,unzip)
