--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: SpatialData.data
 Title: SpatialData datasets
-Depends: R (>= 4.4), SpatialData
+Depends: R (>= 4.4)
 Version: 0.99.2.1
 Description: Makes 'scverse' data examples available through the NSF OSN, 
     and accessible from within R, using 'BiocFileCache'. Furthermore, 
@@ -18,7 +18,8 @@ Authors@R: c(
 Imports:
     basilisk,
     BiocFileCache,
-    reticulate
+    reticulate,
+    SpatialData
 Suggests:
     BiocStyle,
     knitr,
