--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,11 @@ export(LungAdenocarcinomaMCMICRO)
 export(MouseBrainMERFISH)
 export(MouseIntestineVisHD)
 export(MulticancerSteinbock)
+export(availableOSN)
 export(available_sdio)
+export(loadFromOSN)
 export(use_sdio)
 import(BiocFileCache)
+importClassesFrom(SpatialData,SpatialData)
 importFrom(SpatialData,readSpatialData)
 importFrom(utils,unzip)
